After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 712242 - Compilation fails when variable of type 'uint' encountered
Compilation fails when variable of type 'uint' encountered
Status: RESOLVED FIXED
Product: gjs
Classification: Bindings
Component: general
1.38.x
Other Mac OS
: Normal normal
: ---
Assigned To: gjs-maint
gjs-maint
Depends on:
Blocks:
 
 
Reported: 2013-11-13 19:36 UTC by Juan R. Garcia Blanco
Modified: 2013-11-13 19:53 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix 'uint v;' declaration (828 bytes, patch)
2013-11-13 19:36 UTC, Juan R. Garcia Blanco
committed Details | Review

Description Juan R. Garcia Blanco 2013-11-13 19:36:06 UTC
Created attachment 259748 [details] [review]
Fix 'uint v;' declaration

I'm trying to compile gjs @1.38.1 on OSX using clang-500.2.79 and compilation fails in file value.c (now it's value.cpp in HEAD) with the following error:

gi/value.c:671:9: error: use of undeclared identifier 'uint'
        uint v;

I tried to find a uint type in spidermonkey API and found nothing (https://developer.mozilla.org/en-US/docs/Mozilla/Projects/SpiderMonkey/JSAPI_reference?redirectlocale=en-US&redirectslug=SpiderMonkey%2FJSAPI_Reference)

I guess that although this compiles on other platforms, it's an error anyways since uint is not standard. I'm not sure if it should say 'unsigned int' or 'guint'.

Thank you.
Comment 1 Colin Walters 2013-11-13 19:51:27 UTC
Review of attachment 259748 [details] [review]:

Looks good; I just tweaked the commit message a bit per https://live.gnome.org/GnomeLove/SubmittingPatches
Comment 2 Juan R. Garcia Blanco 2013-11-13 19:53:58 UTC
Thank you very much! :)