gi/value: Fix uint type in variable

It's not a standard type; we should use guint instead.

https://bugzilla.gnome.org/show_bug.cgi?id=712242